Fixed code scrolling on mobile devices

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -162,21 +162,24 @@ pre {
   background-color: var(--color-primary);
   border: 1px solid #ccc;
   white-space: pre;
+    -webkit-overflow-scrolling: touch;
 }
 
 code[class*="language-"], pre[class*="language-"], pre code {
     margin: 0 0;
+    -webkit-overflow-scrolling: touch;
 }
 
 code {
   display: block;
   font-family: Consolas, Monaco, monospace;
   font-size: 10pt;
-  overflow-x: auto;
+  overflow-x: scroll;
   padding: 0.5em;
   scrollbar-width: thin;
-  -moz-tab-size: 4;
   tab-size: 4;
+  -moz-tab-size: 4;
+  -webkit-overflow-scrolling: touch;
 }
 
 pre code.hljs {
